@@ -656,7 +656,22 @@ sub _params_for_key {
 
 sub change_id_for_key {
     my $self = shift;
-    return $self->change_id_for( $self->_params_for_key(shift) );
+    return $self->find_change_id( $self->_params_for_key(shift) );
+}
+
+sub find_change_id {
+    my ( $self, %p ) = @_;
+
+    # Find the change ID or return undef.
+    my $change_id = $self->change_id_for(
+        change_id => $p{change_id},
+        change    => $p{change},
+        tag       => $p{tag},
+        project   => $p{project} || $self->plan->project,
+    ) // return;
+
+    # Return relative to the offset.
+    return $self->change_id_offset_from_id($change_id, $p{offset});
 }
 
 sub change_for_key {
@@ -1147,6 +1162,11 @@ sub change_offset_from_id {
     hurl "$class has not implemented change_offset_from_id()";
 }
 
+sub change_id_offset_from_id {
+    my $class = ref $_[0] || $_[0];
+    hurl "$class has not implemented change_id_offset_from_id()";
+}
+
 sub registered_projects {
     my $class = ref $_[0] || $_[0];
     hurl "$class has not implemented registered_projects()";
@@ -1567,7 +1587,7 @@ will be the offset number of changes before the latest change.
 
 =head3 C<change_for_key>
 
-  my $change = if $engine->change_for_key(key);
+  my $change = if $engine->change_for_key($key);
 
 Searches the deployed changes for a change corresponding to the specified key,
 which should be in a format as described in L<sqitchchanges>. Throws an
@@ -1576,7 +1596,7 @@ matches no changes.
 
 =head3 C<change_id_for_key>
 
-  my $change_id = if $engine->change_id_for_key(key);
+  my $change_id = if $engine->change_id_for_key($key);
 
 Searches the deployed changes for a change corresponding to the specified key,
 which should be in a format as described in L<sqitchchanges>, and returns the
@@ -1585,7 +1605,7 @@ Returns C<undef> if it matches no changes.
 
 =head3 C<change_for_key>
 
-  my $change = if $engine->change_for_key(key);
+  my $change = if $engine->change_for_key($key);
 
 Searches the list of deployed changes for a change corresponding to the
 specified key, which should be in a format as described in L<sqitchchanges>.
@@ -1651,6 +1671,13 @@ Search by change name or tag.
 
 The offset, if passed, will be applied relative to whatever change is found by
 the above algorithm.
+
+=head3 C<find_change_id>
+
+  my $change_id = $engine->find_change_id(%params);
+
+Like C<find_change()>, taking the same parameters, but returning an ID instead
+of a change.
 
 =head3 C<run_deploy>
 
@@ -2287,6 +2314,13 @@ Otherwise, the change returned should be C<$offset> steps from that change ID,
 where C<$offset> may be positive (later step) or negative (earlier step).
 Returns C<undef> if the change was not found or if the offset is more than the
 number of changes before or after the change, as appropriate.
+
+=head3 C<change_id_offset_from_id>
+
+  my $id = $engine->change_id_offset_from_id( $change_id, $offset );
+
+Like C<change_offset_from_id()> but returns the change ID rather than the
+change object.
 
 =head3 C<registry_version>
 
